# ble-ws-fw

./: .ccls  .gitignore  CMakeLists.txt  README.md  flake.nix  prj.conf
boards/: arduino_nano_33_ble.overlay
nix/: arduino-bossa.nix  bossa-no-applet-build.patch  west.nix
src/: attention.c  attention.h  bas.c  bas.h  main.c  mesh.c  mesh.h  sensor.c  sensor.h
